# siisurit_guide

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mkdocs.yaml  pyproject.toml
.github/workflows/: build.yaml
guide/: index.md
guide/admin/: access-and-license.md  index.md  requirements.md
guide/admin/commands/: clear_caches.md  clear_reports.md  estimate_task.md  explain_work_entry.md  find_similar_tasks.md  index.md  make_users.md  match_project.md  remove_organization.md  updape_organization.md  update_ollama_models.md  update_project.md  update_search.md
guide/admin/configuration/: compose-file.md  environment-file.md  index.md  user-list.md
guide/admin/installation/: docker.md  grafana.md  index.md  nginx.md  ollama.md  organization.md  sql-report-user.md
guide/admin/operation/: database.md  index.md
guide/release/: index.md
guide/release/v0.46.0/: index.md
guide/release/v0.47.0/: index.md
guide/release/v0.48.0/: index.md
guide/user/: index.md  organization-configuration.md  report-views.md
guide/user/configuration/: index.md  organization-configuration.md  work-matches.md
guide/user/connectors/: clockodo.md  github.md  index.md  kimai.md  youtrack.md
guide/user/grafana/: index.md
scripts/: build_guide.sh  serve_guide.sh  set_up_project.sh  update_dependencies.sh
